--- a/MiniShopApp/appsettings.json
+++ b/MiniShopApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyConection": "Server=(localdb)\\MSSQLLocalDB;database=MiniAppDb;TrustServerCertificate=true;MultipleActiveResultSets=true;"
+  }
 }
