--- a/MiniShopApp/appsettings.json
+++ b/MiniShopApp/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyConection": "Server=(localdb)\\MSSQLLocalDB;database=MiniAppDb;TrustServerCertificate=true;MultipleActiveResultSets=true;"
+    "MyConection": "Server=(localdb)\\MSSQLLocalDB;database=MiniAppDb;TrustServerCertificate=true;MultipleActiveResultSets=true;",
+    "MyServerConection": "Server=db21280.databaseasp.net; Database=db21280; User Id=db21280; Password=6e-GpB9+_kW4; Encrypt=False; MultipleActiveResultSets=True; "
   }
 }
