--- a/MiniShopApp/appsettings.json
+++ b/MiniShopApp/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "BotToken": "7823822574:AAFm2SzyMoepbVa6kMTElqlsbgr8JSUkkM4",
+  "BotTokenTest": "7541455257:AAEvkNI0oaYmbkLxQOalxClF3EDNaoV3FiA",
+  "BotWebAppUrl": "www.example.com",
   "ConnectionStrings": {
     "MyConection": "Server=(localdb)\\MSSQLLocalDB;database=MiniAppDb;TrustServerCertificate=true;MultipleActiveResultSets=true;",
     "MyServerConection": "Server=db21280.databaseasp.net; Database=db21280; User Id=db21280; Password=6e-GpB9+_kW4; Encrypt=False; MultipleActiveResultSets=True; "
