--- a/MiniShopApp/appsettings.json
+++ b/MiniShopApp/appsettings.json
@@ -11,6 +11,6 @@
   "BotWebAppUrl": "www.example.com",
   "ConnectionStrings": {
     "MyConnection": "Server=(localdb)\\MSSQLLocalDB;database=MiniAppDb;TrustServerCertificate=true;MultipleActiveResultSets=true;",
-    "MyServerConection": "Server=db21280.databaseasp.net; Database=db21280; User Id=db21280; Password=6e-GpB9+_kW4; Encrypt=False; MultipleActiveResultSets=True; "
+    "MyServerConnection": "Server=db21280.databaseasp.net; Database=db21280; User Id=db21280; Password=6e-GpB9+_kW4; Encrypt=False; MultipleActiveResultSets=True; "
   }
 }
