--- a/MiniShopApp/appsettings.json
+++ b/MiniShopApp/appsettings.json
@@ -11,6 +11,7 @@
   "BotWebAppUrl": "www.example.com",
   "ConnectionStrings": {
     "MyConnection": "Server=(localdb)\\MSSQLLocalDB;database=MiniAppDb;TrustServerCertificate=true;MultipleActiveResultSets=true;",
-    "MyServerConnection": "Server=db21280.databaseasp.net; Database=db21280; User Id=db21280; Password=6e-GpB9+_kW4; Encrypt=False; MultipleActiveResultSets=True; "
+    "MyServerConnection": "Server=db21821.databaseasp.net; Database=db21821; User Id=db21821; Password=g?9M5nZ%p#4F; Encrypt=False; MultipleActiveResultSets=True;"
+    
   }
 }
