--- a/MiniShopApp/appsettings.json
+++ b/MiniShopApp/appsettings.json
@@ -8,10 +8,10 @@
   "AllowedHosts": "*",
   "BotToken": "7823822574:AAFm2SzyMoepbVa6kMTElqlsbgr8JSUkkM4",
   "BotTokenTest": "7541455257:AAEvkNI0oaYmbkLxQOalxClF3EDNaoV3FiA",
-  "BotWebAppUrl": "www.example.com",
+  "BotWebAppUrl": "https://minishopapp.runasp.net/index",
   "ConnectionStrings": {
     "MyConnection": "Server=(localdb)\\MSSQLLocalDB;database=MiniAppDb;TrustServerCertificate=true;MultipleActiveResultSets=true;",
     "MyServerConnection": "Server=db21821.databaseasp.net; Database=db21821; User Id=db21821; Password=g?9M5nZ%p#4F; Encrypt=False; MultipleActiveResultSets=True;"
-    
+
   }
 }
