--- a/MiniShopApp/MiniShopApp.csproj
+++ b/MiniShopApp/MiniShopApp.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.105.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.5">
@@ -21,6 +22,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="MudBlazor" Version="8.8.0" />
+    <PackageReference Include="QuestPDF" Version="2025.5.1" />
     <PackageReference Include="Telegram.Bot" Version="22.5.1" />
   </ItemGroup>
 
@@ -30,7 +32,6 @@
 
   <ItemGroup>
     <Folder Include="Models\Transactions\" />
-    <Folder Include="Pages\Customers\" />
     <Folder Include="Pages\Transactions\" />
   </ItemGroup>
 
