--- a/MiniShopApp/MiniShopApp.csproj
+++ b/MiniShopApp/MiniShopApp.csproj
@@ -30,6 +30,7 @@
     </PackageReference>
     <PackageReference Include="MudBlazor" Version="8.8.0" />
     <PackageReference Include="QuestPDF" Version="2025.5.1" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.10" />
     <PackageReference Include="Telegram.Bot" Version="22.5.1" />
   </ItemGroup>
 
